# lmsPythonModules

./: CMakeLists.txt  Readme.md  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  mymodule.py
python_module_container/: CMakeLists.txt  README.md
python_module_container/include/: python_module_container.h
python_module_container/src/: interface.cpp  python_module_container.cpp
src/: test.cpp
